--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -47,7 +47,7 @@
             android:layout_height="match_parent"
             android:layout_weight="0.25"
             android:onClick="handleButtonLimpar"
-            android:src="@drawable/ic_reply_all_black_24dp" />
+            android:src="@drawable/ic_clear_all" />
 
         <ImageButton
             style="@style/botao"
@@ -55,7 +55,7 @@
             android:layout_height="match_parent"
             android:layout_weight="0.25"
             android:onClick="handleButtonDesfazer"
-            android:src="@drawable/ic_reply_black_24dp" />
+            android:src="@drawable/ic_clear" />
 
         <Button
             style="@style/botao"
